# taptempo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  taptempo.cpp
debian/: changelog  control  copyright  manpages  rules  taptempo.1
msys/: msys2_build.sh
po/: fr.po  taptempo.pot
src/: main.cpp  options.cpp  options.h  taptempo.cpp  taptempo.h  taptempo_config.h.in
